Worked on module loading and logout mechanism
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1446 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -30,6 +30,9 @@
         [Name("application")]
         [ManagedEvent(name="APP.MERGE_GRANTS")]
 	    [ManagedEvent(name="APP.READY_TO_UNLOAD")]
+        [ManagedEvent(name="LOAD_ALL_MODULES")]
+        [ManagedEvent(name="UNLOAD_ALL_MODULES")]
+        [ManagedEvent(name="I18N_LOAD_ALL")]
         [ResourceBundle("appMain")]
         [ResourceBundle("appError")]
     </mx:Metadata>
