--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
@@ -100,7 +100,9 @@
              *
              * @param event Unused
              */
-            public function onUnloaded(event : ApplicationEvent = null) : void { checkState(); }
+            public function onUnloaded(event : ApplicationEvent = null) : void {
+                checkState();
+            }
             
             [Observer("MODULE_LOADED")]
             /**
@@ -109,7 +111,9 @@
              *
              * @param event Unused
              */
-            public function onLoaded(event : ApplicationEvent = null) : void { checkState(); }
+            public function onLoaded(event : ApplicationEvent = null) : void {
+                checkState();
+            }
             
             private function init() : void {
                 newBtn.enabled = true;
