--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/RoleManagementView.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:cor="org.openwms.web.flex.client.component.*" width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="init()">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:cor="org.openwms.web.flex.client.component.*" width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="onCreate()">
 
     <mx:Metadata>
         [Name]
@@ -70,12 +70,16 @@
             [Bindable]
             private var selected : Role = null;
 
-            private function init() : void {
-                if (modelLocator.allUsers.length == 0) { dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS)); }
-                dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
+            private function onCreate() : void {
+                if (modelLocator.allUsers.length == 0) {
+                    dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
+                }
+                refresh();
             }
             
-            private function onRowClick(event:ListEvent):void { selected = event.currentTarget.selectedItem as Role; }
+            private function onRowClick(event:ListEvent):void {
+                selected = event.currentTarget.selectedItem as Role;
+            }
 
             /**
              * Double clicking an entry opens the edit dialogue.
@@ -177,6 +181,7 @@
              * Reload the list of Roles.
              */
             private function refresh():void {
+                trace("Trigger Loading Roles");
                 dispatchEvent(new RoleEvent(RoleEvent.LOAD_ALL_ROLES));
             }
             
