--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
@@ -21,7 +21,7 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="init();">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" backgroundColor="#C2DAEF" creationComplete="onCreate()">
     <mx:states>
         <mx:State name="BooleanState">
             <mx:RemoveChild target="{textinput1}"/>
@@ -73,11 +73,14 @@
         	import org.openwms.web.flex.client.event.PropertyEvent;
         	import org.openwms.web.flex.client.model.ModelLocator;
         
-            [In]
+            [Inject]
             [Bindable]
-            public var modelLocator:ModelLocator;
+            /**
+             * Injected Model.
+             */
+            public var modelLocator : ModelLocator;
         
-            private function init() : void {
+            private function onCreate() : void {
                 dispatchEvent(new PropertyEvent(PropertyEvent.LOAD_ALL_PROPERTIES));
             }
         ]]>
