Worked on module loading and logout mechanism
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1447 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationGroupView.mxml
@@ -88,7 +88,7 @@
              *
              * Observed event: LG.COLL_LOCATION_GROUPS_REFRESHED
              */
-            public function refreshTree() : void {
+            public function refreshTree(event : LocationGroupEvent) : void {
                 locationGroupTree.dataProvider.refresh();
             }
 
