--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -80,7 +80,9 @@
                 if (commonModelLocator.allLocationGroups.length == 0) {
                 	dispatchEvent(new LocationGroupEvent(LocationGroupEvent.LOAD_ALL_LOCATION_GROUPS));
                 }
-                reload();
+                if (commonModelLocator.allLocations.length == 0) {
+                    reload();
+                }
             }
 
             private function onRowClick(event : ListEvent):void {
