--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="ISO-8859-1"?>
 <!--
 /*
  * openwms.org, the Open Warehouse Management System.
@@ -22,7 +22,7 @@
  */
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%" styleName="frameContainerSkin"
- creationComplete="onCreated();" implements="org.openwms.web.flex.client.IObserver">
+ creationComplete="onCreated();" implements="org.openwms.web.flex.client.IObservable">
 
     <mx:Metadata>
         [Name]
@@ -109,7 +109,9 @@
             /**
              * Callback method. To be called when a new user image was saved.
              */
-            public function notify() : void { refresh(); }
+            public function notify() : void {
+                refresh();
+            }
 
             private function showFileUploadDialog() : void {
                 if (modelLocator.selectedUser == null || isNaN(modelLocator.selectedUser.id)) {
@@ -121,9 +123,13 @@
                 PopUpManager.centerPopUp(pop1);
             }
             
-            private function refresh() : void { dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS)); }
+            private function refresh() : void {
+                dispatchEvent(new UserEvent(UserEvent.LOAD_ALL_USERS));
+            }
 
-            private function addUser() : void { dispatchEvent(new UserEvent(UserEvent.ADD_USER)); }
+            private function addUser() : void {
+                dispatchEvent(new UserEvent(UserEvent.ADD_USER));
+            }
 
             private function deleteUser() : void {
                 if (modelLocator.selectedUser == null) {
@@ -196,7 +202,9 @@
                 }
             }
 
-            private function setEditable(event : Event) : void { event.currentTarget.editable = true; }
+            private function setEditable(event : Event) : void {
+                event.currentTarget.editable = true;
+            }
             
             private function setUserImage() : void {
                 var asset : BitmapAsset;
